--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pip install
-streamlit 
-folium 
-requests
-pandas 
-geopy 
-googlemaps
+streamlit==1.38.0
+folium==0.20.0
+streamlit-folium==0.17.0  # streamlit_folium değil, tire ile
+geopy==2.4.1
+googlemaps==4.12.0
+pandas==2.2.2
+requests==2.32.3
