--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-pandas
-folium
+streamlit==1.38.0
+pandas==2.3.2
+folium==0.20.0
 streamlit-folium==0.25.1
-geopy
-googlemaps=
-requests
+geopy==2.4.1
+googlemaps==4.10.0
+requests==2.32.5
