--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ feedparser>=6.0.11
 pandas>=2.2.2
 python-dateutil>=2.9.0post0
 Unidecode>=1.3.8
+trafilatura==1.7.0
+beautifulsoup4>=4.12.3
+lxml>=4.9.4
