--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ openai>=1.40.0
 requests>=2.32.3
 feedparser>=6.0.11
 pandas>=2.2.2
-python-dateutil>=2.9.0post0
+python-dateutil>=2.9.0
 Unidecode>=1.3.8
 trafilatura==1.7.0
 beautifulsoup4>=4.12.3
 lxml>=4.9.4
+folium>=0.16.0
+streamlit-folium>=0.17.0
