--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-streamlit>=1.36.0
-openai>=1.40.0
-requests>=2.32.3
-feedparser>=6.0.11
-pandas>=2.2.2
-python-dateutil>=2.9.0post0
-Unidecode>=1.3.8
-trafilatura==1.7.0
-beautifulsoup4>=4.12.3
-lxml>=4.9.4
+streamlit
+pandas
+openai
+feedparser
+folium
+streamlit-folium
+requests
+rapidfuzz
+beautifulsoup4
