--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
+# Projenin temel framework'ü
 streamlit
-pandas
-openai
-feedparser
-folium
-streamlit-folium
+
+# API istekleri için gerekli (Tavily ve Grok)
 requests
-rapidfuzz
-beautifulsoup4
+openai
+
+# Lokal geliştirme için API anahtarlarını .env dosyasından okumak için (önerilir)
+python-dotenv
