--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit
-langchain
-langchain-openai
-langchain-community
-langchain-core
-tavily-python
-python-dotenv
+streamlit==1.39.0
+pandas==2.2.2
+folium==0.17.0
+streamlit-folium==0.21.0
+geopy==2.4.1
